cass -fixed search button z-index

--- a/public/css/search.css
+++ b/public/css/search.css
@@ -77,6 +77,7 @@
 #basic-addon1 {
     background-color: #EA5656;
     height: 38px;
+    z-index: -999;
 }
 
 .location-bar {
